syntax = "proto3";
package onomyprotocol.dao.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/onomyprotocol/onomy/x/dao/types";
option (gogoproto.equal_all) = true;

// FundTreasuryProposal details a dao fund treasury proposal.
message FundTreasuryProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string sender = 1;
  string title = 2;
  string description = 3;
  repeated cosmos.base.v1beta1.Coin amount = 4 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// FundTreasuryProposal details a dao exchange with treasury proposal.
message ExchangeWithTreasuryProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string sender = 1;
  string title = 2;
  string description = 3;
  repeated cosmos.base.v1beta1.Coin amountAsk = 4 [
    (gogoproto.moretags) = "yaml:\"amount_ask\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin amountBid = 5 [
    (gogoproto.moretags) = "yaml:\"amount_bid\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}